[metadata]
name = saspt-test
version = 0.1.0
author = Alec Heckert
author_email = alecheckert@gmail.com
description = State arrays for single particle tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alecheckert/saspt
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 
